--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@fortawesome/react-fontawesome": "^3.0.2",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
+    "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.2",
     "swiper": "^11.2.10"
   },
