--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,6 +1,16 @@
 [
   {
-    "id": 1,
+  "id": 1,
+  "title": "Machine Learning-Enhanced SPR-based Optical Biosensor for Cancer Cell Detection",
+  "subtext": "Research Project",
+  "description": "A research project focused on developing a Surface Plasmon Resonance (SPR)-based optical biosensor enhanced with machine learning techniques for the detection of cancer cells.",
+  "image": "/projects/project_11.jpg",
+  "technologies": ["Python", "Machine Learning"],
+  "live_link": "https://authors.elsevier.com/c/1liku6wNV0YPs",
+  "github_link": ""
+  },
+  {
+    "id": 2,
     "title": "Online Exam System",
     "subtext": "Full-stack Web Application",
     "description": "A secure platform featuring robust authentication, comprehensive exam management with timers, real-time result generation, and user profiles.",
@@ -10,7 +20,7 @@
     "github_link": "https://github.com/Wahidu1/Online-Exam"
   },
   {
-    "id": 2,
+    "id": 3,
     "title": "News Portal",
     "subtext": "Content Management System",
     "description": "A dynamic news platform with full article CRUD functionality, a rich text editor, categories, tags, comments, user authentication, and an admin dashboard.",
@@ -20,7 +30,7 @@
     "github_link": "https://github.com/Wahidu1/news-portal"
   },
   {
-    "id": 3,
+    "id": 4,
     "title": "E-Learning Platform",
     "subtext": "Educational Web Application",
     "description": "An e-learning site with user authentication, course and module management, student enrollment capabilities, and a fully responsive UI.",
